# FreeCAD_Geant4

./: .gitignore  README.md  ToDo  createGDMLsolid.py  createTestGDMLfiles.py  diagGDML.py  scanGDML.py  softLinks  test2.py
BRep/: Plan
Mod/: CopyGDML2Geant4  GDMLCommands.py  GDMLObjects.py  Init.py  InitGui.py  LinkGDML2Geant4  Resources  exportGDML.py  exportGDML.py.save  importGDML.old  importGDML.py
MyG4py/: MyG4py.cpp  build.sh  test2.py
exportSolid/: CMakeCache.txt  CMakeLists.txt  DumpGDML.cc  Makefile  cmake_install.cmake
myg4py/: CMakeList.save  CMakeLists.txt  MyFC-G4.cc  MyFC-G4.cc.save2  MyFC-G4.cpp  MyFC-G4.hh  MyFC_G4.cpp  MyG4py.cpp  __init__.py  build.sh  fc2G4_Matrix.cc  fc2G4_Matrix.hh  list  myG4BREPSolid.cc  myG4TessellatedSolid.cc  myG4TriangularFacet.cc  myG4VSolid.cc  myG4VSolid.orig  myg4py.cc  test.py
myg4py/include/: README
myg4py/lib/: __init__.py
myg4py/src/: __init__.py
notes/: G4TessellateSolid.hh
